--- a/index.html
+++ b/index.html
@@ -157,12 +157,13 @@
 			</section>
 			<!-- END MISION -->
 
-			<!-- SERVICES -->
+			<!-- CAPACITACIONES -->
 			<main id="capacitaciones" class="services--section">
 				<h1 class="services--section--title">
 					Capacitaciones para docentes
 				</h1>
 
+				<!--DIPLOMATURAS -->
 				<h2 class="services--section--subtitle">DIPLOMATURAS</h2>
 				<div class="services--section--container">
 					<div class="services--section--card">
@@ -227,7 +228,9 @@
 							alt="image" />
 					</div>
 				</div>
+				<!--END DIPLOMATURAS -->
 
+				<!--ACTUALIZACIÓNES -->
 				<h2 class="services--section--subtitle">
 					ACTUALIZACIÓNES ACADÉMICAS
 				</h2>
@@ -265,7 +268,9 @@
 							alt="image" />
 					</div>
 				</div>
+				<!--END ACTUALIZACIÓNES -->
 
+				<!-- ESPECIALIZACIONES -->
 				<h2 class="services--section--subtitle">
 					ESPECIALIZACIONES DOCENTES DE NIVEL SUPERIOR
 				</h2>
@@ -304,7 +309,9 @@
 							alt="image" />
 					</div>
 				</div>
+				<!-- END ESPECIALIZACIONES -->
 
+				<!-- PEDAGOGIAS -->
 				<h2 class="services--section--subtitle">
 					Tramo Pedagógico de Nivel Medio y SUPERIOR
 				</h2>
@@ -336,9 +343,59 @@
 					<div class="swiper-button-prev"></div>
 					<div class="swiper-pagination"></div>
 				</div>
+				<!-- END PEDAGOGIAS -->
 			</main>
-			<!-- END SERVICES -->
+			<!-- END CAPACITACIONES -->
 
+			<!-- FAQS -->
+			<div class="faqs">
+				<h4 class="faqs--title">Preguntas Frecuentes</h4>
+				<p class="faqs--description">
+					Queremos aclarar cualquier inquietud que puedas tener. A
+					continuación, respondemos las preguntas más frecuentes de
+					nuestros clientes
+				</p>
+
+				<!-- PREGUNTA FRECUENTES -->
+				<details class="faqs--container">
+					<summary class="faqs--faq">Pregunta numero 1</summary>
+					<div class="faqs--answer">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit.
+						Quisquam nostrum porro ea nulla necessitatibus, commodi
+						quis magnam. Omnis, rerum iste. Enim minus perspiciatis,
+						vel ex eius incidunt possimus quidem non, dolorum nulla
+						ipsum voluptatibus fugiat! Quia quos modi a, quidem,
+						tenetur ratione vero est ullam, fugiat quod illo non
+						eos.
+					</div>
+				</details>
+
+				<!-- PREGUNTA FRECUENTES -->
+				<details class="faqs--container">
+					<summary class="faqs--faq">Pregunta numero 2</summary>
+					<div class="faqs--answer">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit.
+						Quisquam nostrum porro ea nulla necessitatibus, commodi
+						quis magnam. Omnis, rerum iste. Enim minus perspiciatis,
+						vel ex eius incidunt possimus quidem non, dolorum nulla
+						ipsum voluptatibus fugiat! Quia quos modi a, quidem,
+						tenetur ration
+					</div>
+				</details>
+
+				<!-- PREGUNTA FRECUENTES -->
+				<details class="faqs--container">
+					<summary class="faqs--faq">Pregunta numero 3</summary>
+					<div class="faqs--answer">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit.
+						Quisquam nostrum porro ea nulla necessitatibus, commodi
+						quis magnam.
+					</div>
+				</details>
+			</div>
+			<!-- END FAQS -->
+
+			<!-- FOOTER -->
 			<footer class="footer">
 				<div class="footer--info--container">
 					<p class="footer--info--text">
@@ -381,6 +438,7 @@
 					</div>
 				</div>
 			</footer>
+			<!--END FOOTER -->
 		</div>
 
 		<script src="script.js" type="module"></script>
