--- a/index.html
+++ b/index.html
@@ -442,45 +442,55 @@
 						cualquier otra vía que prefieras.
 					</p>
 				</div>
-				<div class="footer--info--container">
-					<div class="footer--info--contact">
-						<img
-							class="footer--info--contact--icon"
-							src="./img/assets/wtsp.svg"
-							alt="whatsapp" />
-						<p
-							data-link="https://api.whatsapp.com/send?phone=542911111111"
-							class="open--link footer--info--contact--text">
-							+542911111111
+				<div class="footer--icons--container" id="contacto">
+					<div
+						class="footer--info--icon--container open--link"
+						data-link="https://api.whatsapp.com/send?phone=5429144444">
+						<div class="footer--info--icon--link" title="whatsapp">
+							<img
+								class="footer--info--icon--link--image"
+								src="./img/assets/wtsp.svg"
+								alt="whatsapp" />
+						</div>
+						<p class="footer--info--icon--container--text">
+							5429144444
 						</p>
 					</div>
-					<div class="footer--info--contact">
-						<img
-							class="footer--info--contact--icon"
-							src="./img/assets/wtsp.svg"
-							alt="whatsapp" />
-						<p
-							data-link="https://api.whatsapp.com/send?phone=542911111111"
-							class="open--link footer--info--contact--text">
-							+542911111111
+					<div class="footer--info--icon--container" data-link="">
+						<div class="footer--info--icon--link" title="email">
+							<img
+								class="footer--info--icon--link--image"
+								src="./img/assets/email.svg"
+								alt="email" />
+						</div>
+						<p class="footer--info--icon--container--text">
+							email@email.com
 						</p>
 					</div>
-					<div class="footer--info--contact">
-						<img
-							class="footer--info--contact--icon"
-							src="./img/assets/email.svg"
-							alt="email" />
-						<p class="footer--info--contact--text">
-							email@email.com2
+					<div
+						class="footer--info--icon--container open--link"
+						data-link="https://www.instagram.com/geacapacitaciones">
+						<div class="footer--info--icon--link" title="Instagram">
+							<img
+								class="footer--info--icon--link--image"
+								src="./img/assets/ig.svg"
+								alt="Instagram" />
+						</div>
+						<p class="footer--info--icon--container--text">
+							Instagram
 						</p>
 					</div>
-					<div id="contacto" class="footer--info--contact">
-						<img
-							class="footer--info--contact--icon"
-							src="./img/assets/email.svg"
-							alt="email" />
-						<p class="footer--info--contact--text">
-							email@email.com2
+					<div
+						class="footer--info--icon--container open--link"
+						data-link="https://www.facebook.com/geacapacitacion">
+						<div class="footer--info--icon--link" title="Facebook">
+							<img
+								class="footer--info--icon--link--image"
+								src="./img/assets/fb.svg"
+								alt="Facebook" />
+						</div>
+						<p class="footer--info--icon--container--text">
+							Facebook
 						</p>
 					</div>
 				</div>
