--- a/index.html
+++ b/index.html
@@ -158,6 +158,36 @@
 			</section>
 			<!-- END MISION -->
 
+			<!-- BENEFITS -->
+			<section class="benefits--section">
+				<img
+					data-src="./img/assets/benefits.png"
+					class="benefits--section--image lazy"
+					src="" />
+				<h2 class="benefits--section--title">Beneficios</h2>
+				<ul class="benefits--section--list">
+					<li class="benefits--section--list--li">
+						<p class="benefits--section--list--p">
+							Acreditar puntaje cursando de manera online nuestros
+							postítulos docentes
+						</p>
+					</li>
+					<li class="benefits--section--list--li">
+						<p class="benefits--section--list--p">
+							Acompañamiento permanente desde la inscripción hasta
+							la acreditación del puntaje
+						</p>
+					</li>
+					<li class="benefits--section--list--li">
+						<p class="benefits--section--list--p">
+							Permitiéndote titularizar tus horas
+						</p>
+					</li>
+				</ul>
+			</section>
+
+			<!-- END BENEFITS -->
+
 			<!-- CAPACITACIONES -->
 			<main id="capacitaciones" class="services--section">
 				<h1 class="services--section--title">
