--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>GEA</title>
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
@@ -14,6 +14,32 @@
 			<!-- DESKTOP -->
 			<header class="header">
 				<img class="header--image" src="./img/gea/logo.jpg" alt="gea" />
+				<div class="header--icons--container">
+					<div
+						class="header--icons--image--container open--link"
+						data-link="https://api.whatsapp.com/send?phone=5429144444">
+						<img
+							class="header--icons--image--wts"
+							src="./img/assets/wtsp.svg"
+							alt="whatsapp" />
+					</div>
+					<div
+						class="header--icons--image--container open--link"
+						data-link="https://www.instagram.com/geacapacitaciones">
+						<img
+							class="header--icons--image--ig"
+							src="./img/assets/ig.svg"
+							alt="Instagram" />
+					</div>
+					<div
+						class="header--icons--image--container open--link"
+						data-link="https://www.facebook.com/geacapacitacion">
+						<img
+							class="header--icons--image--fb"
+							src="./img/assets/fb.svg"
+							alt="Facebook" />
+					</div>
+				</div>
 				<nav class="header--navigation">
 					<a class="header--navigation--li" href="#nosotros">
 						<span
@@ -43,6 +69,7 @@
 						class="header--mobile--nav--image"
 						src="./img/gea/logo.jpg"
 						alt="logo" />
+
 					<div class="header--mobile--nav--close" data-menu="11">
 						<div class="header--mobile--nav--close--left"></div>
 						<div class="header--mobile--nav--close--right"></div>
@@ -50,6 +77,32 @@
 					<ul
 						id="header--mobile--nav--ul"
 						class="header--mobile--nav--ul">
+						<div class="header--icons--container">
+							<div
+								class="header--icons--image--container open--link"
+								data-link="https://api.whatsapp.com/send?phone=5429144444">
+								<img
+									class="header--icons--image--wts"
+									src="./img/assets/wtsp.svg"
+									alt="whatsapp" />
+							</div>
+							<div
+								class="header--icons--image--container open--link"
+								data-link="https://www.instagram.com/geacapacitaciones">
+								<img
+									class="header--icons--image--ig"
+									src="./img/assets/ig.svg"
+									alt="Instagram" />
+							</div>
+							<div
+								class="header--icons--image--container open--link"
+								data-link="https://www.facebook.com/geacapacitacion">
+								<img
+									class="header--icons--image--fb"
+									src="./img/assets/fb.svg"
+									alt="Facebook" />
+							</div>
+						</div>
 						<a class="header--navigation--li" href="#nosotros">
 							<span
 								class="hover-underline-animation header--navigation--li--text">
@@ -201,6 +254,18 @@
 						<h3 class="services--section--card--title">
 							Diplomatura en Alfabetización Digital
 						</h3>
+						<p class="services--section--card--text">
+							Esta Diplomatura Universitaria se enfoca en la
+							Alfabetización Digital como una habilidad
+							fundamental para aprovechar las Nuevas Tecnologías
+							de la Información y la Comunicación (NTIC) en la
+							educación. Reconociendo la evolución de la
+							Alfabetización a lo largo del tiempo, abordamos
+							múltiples formas de alfabetización. Si deseas
+							desarrollar tus habilidades en Alfabetización
+							Digital, explora nuestros programas educativos hoy
+							mismo.
+						</p>
 						<img
 							data-src="./img/cursos/diplomaturas/2.jpeg"
 							class="services--section--card--image lazy"
@@ -211,6 +276,22 @@
 						<h3 class="services--section--card--title">
 							Diplomatura en Comunicación Institucional
 						</h3>
+						<p class="services--section--card--text">
+							La Diplomatura en Comunicación Institucional y
+							Competencias Comunicativas en la Escuela se enfoca
+							en la relación entre comunicación y cultura
+							institucional. Destaca que la comunicación es una
+							responsabilidad compartida y fundamental en la
+							educación. Aborda la importancia de la escuela como
+							un ecosistema comunicacional que influye en
+							educadores, ambiente, contenidos y metodologías.
+							Esta diplomatura ofrece tanto conocimientos teóricos
+							como herramientas prácticas para abordar esta
+							problemática en el contexto educativo. Si deseas
+							desarrollar tus habilidades en Comunicación
+							Institucional , explora nuestros programas
+							educativos hoy mismo
+						</p>
 						<img
 							data-src="./img/cursos/diplomaturas/5.jpeg"
 							class="services--section--card--image lazy"
@@ -221,6 +302,20 @@
 						<h3 class="services--section--card--title">
 							Diplomatura en Dirección de Instituciones Educativas
 						</h3>
+						<p class="services--section--card--text">
+							La Diplomatura en Comunicación Institucional y
+							Competencias Comunicativas en la Escuela se centra
+							en la relación entre comunicación y cultura
+							institucional en el entorno educativo. Destaca que
+							la comunicación es una responsabilidad compartida y
+							que la escuela actúa como un ecosistema
+							comunicacional que influye en educadores, ambiente,
+							contenidos y metodologías. Esta diplomatura aborda
+							la importancia de la comunicación cultural y ofrece
+							contenidos teóricos y prácticos para abordar esta
+							problemática en la educación."
+						</p>
+
 						<img
 							data-src="./img/cursos/diplomaturas/4.jpeg"
 							class="services--section--card--image lazy"
@@ -231,6 +326,19 @@
 						<h3 class="services--section--card--title">
 							Diplomatura en Evaluación Educativa
 						</h3>
+						<p class="services--section--card--text">
+							El Diplomado en Evaluación Educativa fomenta un
+							análisis reflexivo de la evaluación como herramienta
+							para mejorar las prácticas docentes. Se enfoca en la
+							importancia de considerar la evaluación no sólo como
+							un proceso final, sino como una oportunidad para
+							tomar decisiones informadas durante todo el proceso
+							educativo. Esta propuesta se basa en un enfoque
+							crítico que aborda los desafíos éticos, políticos,
+							pedagógicos y sociales que enfrentan los docentes en
+							relación con la evaluación educativa."
+						</p>
+
 						<img
 							data-src="./img/cursos/diplomaturas/3.jpeg"
 							class="services--section--card--image lazy"
@@ -242,6 +350,19 @@
 							Diplomatura en Problemas Actuales de la Gestión
 							Institucional
 						</h3>
+						<p class="services--section--card--text">
+							La Diplomatura en Problemas Actuales de la Gestión
+							tiene como objetivo colaborar en la mejora de las
+							prácticas educativas en equipos directivos y
+							docentes. Aborda la necesidad de promover,
+							desarrollar, sostener y evaluar propuestas de mejora
+							en las escuelas, considerando problemas actuales de
+							la gestión institucional. Se enfoca en la innovación
+							y el cambio en las instituciones educativas,
+							abordando los desafíos y la incertidumbre que pueden
+							surgir en este proceso.
+						</p>
+
 						<img
 							data-src="./img/cursos/diplomaturas/6.jpeg"
 							class="services--section--card--image lazy"
@@ -252,6 +373,15 @@
 						<h3 class="services--section--card--title">
 							Diplomatura en Educación y Medios
 						</h3>
+						<p class="services--section--card--text">
+							La diplomatura aborda la relación entre educación y
+							medios de comunicación en la sociedad actual. Se
+							enfoca en cómo integrar los medios en la educación,
+							promover habilidades críticas y reflexivas, y
+							enseñar a los estudiantes a seleccionar información
+							de manera informada en medios tradicionales y nuevas
+							tecnologías.
+						</p>
 						<img
 							data-src="./img/cursos/diplomaturas/1.jpeg"
 							class="services--section--card--image--special lazy"
@@ -271,6 +401,17 @@
 							Actualización Selección y evaluación de software
 							educativo
 						</h3>
+						<p class="services--section--card--text">
+							Esta Actualización Académica se centra en la
+							selección y evaluación de software educativo libre
+							para su uso en el aula. El objetivo es aprovechar
+							las computadoras como recursos didácticos para
+							mejorar el aprendizaje de los estudiantes,
+							manteniendo un enfoque en el presente y el futuro de
+							la educación digital. Si deseas desarrollar tus
+							habilidades en Software Educativo , explora nuestros
+							programas educativos hoy mismo
+						</p>
 						<img
 							data-src="./img/cursos/actualizaciones/1.jpeg"
 							class="services--section--card--image lazy"
@@ -281,6 +422,15 @@
 						<h3 class="services--section--card--title">
 							Evaluación Diagnóstica para aprendizaje sustentable
 						</h3>
+						<p class="services--section--card--text">
+							Los objetivos generales de esta actualización se
+							centran en el análisis de las circunstancias
+							educativas para mejorar el proceso de enseñanza y
+							aprendizaje. Se enfoca en el diagnóstico integral
+							del sujeto y revisa diferentes tipos de
+							evaluaciones, centrándose en la evaluación
+							diagnóstica.
+						</p>
 						<img
 							data-src="./img/cursos/actualizaciones/2.jpeg"
 							class="services--section--card--image lazy"
@@ -292,6 +442,16 @@
 							Actualización Académica en Ecosistemas Digitales en
 							la escuela
 						</h3>
+						<p class="services--section--card--text">
+							Esta Actualización Académica se enfoca en los
+							ecosistemas digitales como entornos de interacción y
+							aprendizaje. Se centra en cuatro ejes
+							transformadores: la renovación de teorías de
+							aprendizaje, el uso de plataformas de aprendizaje
+							como entornos personales, el aprendizaje en
+							comunidades virtuales y el papel de las redes
+							sociales educativas
+						</p>
 						<img
 							data-src="./img/cursos/actualizaciones/3.jpeg"
 							class="services--section--card--image lazy"
@@ -311,6 +471,16 @@
 							Especialización Docente de Nivel Superior en
 							Educación Permanente de Jóvenes y Adultos
 						</h3>
+						<p class="services--section--card--text">
+							Esta Especialización se centra en la gestión
+							institucional y del aula en la Educación Permanente
+							de Jóvenes y Adultos. Se enfoca en analizar y
+							reflexionar sobre el Marco Político-Pedagógico de la
+							Educación de Jóvenes y Adultos en el contexto
+							socio-histórico actual, así como en analizar los
+							contextos institucionales en los que trabajan los
+							profesores de personas jóvenes y adultos.
+						</p>
 						<img
 							data-src="./img/cursos/especializaciones/4.jpeg"
 							class="services--section--card--image lazy"
@@ -322,6 +492,17 @@
 							Especialización Docente de Nivel Superior en Jardín
 							maternal
 						</h3>
+						<p class="services--section--card--text">
+							Esta propuesta apunta a formar especialistas en
+							Jardín Maternal que contemple una mejor calidad de
+							la enseñanza, así como la concreción de una
+							formación profesional integral, de modo tal que los
+							docentes se apropien de nuevos saberes y
+							habilidades, fortaleciendo su capacidad de reflexión
+							y acción en relación con las necesidades de los
+							niños pequeños y sus familias. Consultá el puntaje
+							docente para cada provincia.
+						</p>
 						<img
 							data-src="./img/cursos/especializaciones/3.jpeg"
 							class="services--section--card--image lazy"
@@ -333,6 +514,17 @@
 							Especialización Docente de Nivel Superior en
 							Educación en Contextos de encierro
 						</h3>
+						<p class="services--section--card--text">
+							La especialización tiene una duración de cuatro
+							bimestres y consta de 9 módulos virtuales con
+							exámenes tipo multiple choice y recuperatorios. Es
+							habilitante para trabajar en instituciones de
+							encierro y aborda aspectos jurídicos, el rol
+							docente, estrategias didácticas, salud, trabajo,
+							arte y cultura en la educación en contextos de
+							encierro. Es un desafío para los docentes
+							interesados en esta modalidad educativa.
+						</p>
 						<img
 							data-src="./img/cursos/especializaciones/2.jpeg"
 							class="services--section--card--image lazy"
@@ -347,6 +539,13 @@
 					Tramo Pedagógico de Nivel Medio y SUPERIOR
 				</h2>
 				<div class="services--section--container">
+					<div class="services--section--card">
+						<img
+							data-src="./img/formacion/3.jpeg"
+							class="services--section--card--image lazy"
+							src=""
+							alt="image" />
+					</div>
 					<div class="services--section--card">
 						<img
 							data-src="./img/formacion/1.jpeg"
@@ -368,13 +567,6 @@
 							src=""
 							alt="image" />
 					</div>
-					<div class="services--section--card">
-						<img
-							data-src="./img/formacion/3.jpeg"
-							class="services--section--card--image lazy"
-							src=""
-							alt="image" />
-					</div>
 				</div>
 				<!-- END PEDAGOGIAS -->
 
@@ -385,27 +577,61 @@
 				</h2>
 
 				<div class="swiper">
-					<div class="swiper-wrapper">
+					<div class="swiper-wrapper swiper-reviews">
 						<div class="swiper-slide">
-							<img
-								class="lazy swiper-slide-image"
-								data-src="./img/reviews/review_1.webp"
-								src=""
-								alt="pedagogico" />
+							<iframe
+								src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fnoelia.diaz.908%2Fposts%2Fpfbid02Ga4kuUcCwbKVYE1FU3FE9ELGMgpmBg53VCtASQZNLBSCfvjsKmo8bU18r3LBZy48l&show_text=true&width=500"
+								width="500"
+								height="169"
+								style="border: none; overflow: hidden"
+								scrolling="no"
+								frameborder="0"
+								allowfullscreen="true"
+								allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 						</div>
 						<div class="swiper-slide">
-							<img
-								class="lazy swiper-slide-image"
-								data-src="./img/reviews/review_2.png"
-								src=""
-								alt="pedagogico" />
+							<iframe
+								src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmelii.risso%2Fposts%2Fpfbid0aPjv4BiKENGKyE37yRfK55Yin7WAxyuZxmsz1iRvkem2rux6avmhRYFBrXyUsg4il&show_text=true&width=500"
+								width="500"
+								height="246"
+								style="border: none; overflow: hidden"
+								scrolling="no"
+								frameborder="0"
+								allowfullscreen="true"
+								allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 						</div>
 						<div class="swiper-slide">
-							<img
-								class="lazy swiper-slide-image"
-								data-src="./img/reviews/review_3.webp"
-								src=""
-								alt="pedagogico" />
+							<iframe
+								src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fadrianalaura.martinez%2Fposts%2Fpfbid02CTLFXgPyNCqAW7d3D1cPGGuewemQ3j88GoZhffK9pVCkDKmn3BAtdwPEX7TZbDoAl&show_text=true&width=500"
+								width="500"
+								height="188"
+								style="border: none; overflow: hidden"
+								scrolling="no"
+								frameborder="0"
+								allowfullscreen="true"
+								allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+						</div>
+						<div class="swiper-slide">
+							<iframe
+								src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fgabriela.serrano.399041%2Fposts%2Fpfbid032wAXAXvCFyiyS6MtTY8KLHMTEHFs9H15gumTQhyCULbFGEeFxNFSmYSgtzC35knHl&show_text=true&width=500"
+								width="500"
+								height="186"
+								style="border: none; overflow: hidden"
+								scrolling="no"
+								frameborder="0"
+								allowfullscreen="true"
+								allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+						</div>
+						<div class="swiper-slide">
+							<iframe
+								src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmartuu.corsini%2Fposts%2Fpfbid0279UBQMoJHxtB7Ltn6iQSENQZ5qvNcDahHvS59SGtju8WAEkmSA3cMuH12BNexbPQl&show_text=true&width=500"
+								width="500"
+								height="214"
+								style="border: none; overflow: hidden"
+								scrolling="no"
+								frameborder="0"
+								allowfullscreen="true"
+								allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 						</div>
 					</div>
 					<div class="swiper-button-next"></div>
@@ -427,38 +653,58 @@
 
 				<!-- PREGUNTA FRECUENTES -->
 				<details class="faqs--container">
-					<summary class="faqs--faq">Pregunta numero 1</summary>
+					<summary class="faqs--faq">
+						¿Como Acredito el Puntaje?
+					</summary>
 					<div class="faqs--answer">
-						Lorem ipsum dolor sit amet consectetur adipisicing elit.
-						Quisquam nostrum porro ea nulla necessitatibus, commodi
-						quis magnam. Omnis, rerum iste. Enim minus perspiciatis,
-						vel ex eius incidunt possimus quidem non, dolorum nulla
-						ipsum voluptatibus fugiat! Quia quos modi a, quidem,
-						tenetur ratione vero est ullam, fugiat quod illo non
-						eos.
+						Una vez finalizada la capacitación el Alumno recibe el
+						Certificado Original en formato PDF el cual el docente
+						debe cargar de manera digital en las fechas designadas
+						en su distrito ( este mismo certificado luego se envía
+						por correo Argentino a su Domicilio)
 					</div>
 				</details>
 
 				<!-- PREGUNTA FRECUENTES -->
 				<details class="faqs--container">
-					<summary class="faqs--faq">Pregunta numero 2</summary>
+					<summary class="faqs--faq">
+						¿Tengo acompañamiento en el Campus para cursar la
+						Capacitación?
+					</summary>
 					<div class="faqs--answer">
-						Lorem ipsum dolor sit amet consectetur adipisicing elit.
-						Quisquam nostrum porro ea nulla necessitatibus, commodi
-						quis magnam. Omnis, rerum iste. Enim minus perspiciatis,
-						vel ex eius incidunt possimus quidem non, dolorum nulla
-						ipsum voluptatibus fugiat! Quia quos modi a, quidem,
-						tenetur ration
+						Vas a contar con el número de whatsapp de tu
+						representante para todas las cuestiones administrativas
+						o relacionadas al funcionamiento del campus, dentro del
+						mismo cuenta con el mail de tutoría y foros de consultas
+						para despejar las dudas sobre la capacitación en sí.
 					</div>
 				</details>
 
 				<!-- PREGUNTA FRECUENTES -->
 				<details class="faqs--container">
-					<summary class="faqs--faq">Pregunta numero 3</summary>
+					<summary class="faqs--faq">
+						¿Cómo son las formas de Pago?
+					</summary>
 					<div class="faqs--answer">
-						Lorem ipsum dolor sit amet consectetur adipisicing elit.
-						Quisquam nostrum porro ea nulla necessitatibus, commodi
-						quis magnam.
+						Contamos con dos Formas de Pago, Link de Mercadopago
+						(Tarjeta de Crédito, Tarjeta de Débito, Rapipago o Pago
+						Fácil) o mensualmente mediante transferencia Bancaria.-
+					</div>
+				</details>
+
+				<!-- PREGUNTA FRECUENTES -->
+				<details class="faqs--container">
+					<summary class="faqs--faq">
+						¿Tengo que tener abonado la Totalidad de las Cuotas para
+						Recibir mi certificación?
+					</summary>
+					<div class="faqs--answer">
+						No es necesario haber abonado en su totalidad la
+						capacitación para recibir su certificado. El mismo se
+						entrega una vez finalizado la Capacitación para que el
+						docente pueda hacer su presentación, luego le queda un
+						compromiso de pago hasta completar el plan de pago
+						elegido
 					</div>
 				</details>
 			</div>
