add whatsapp button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 		<title>GEA</title>
 		<link
 			rel="stylesheet"
+			href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+		<link
+			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
 		<link rel="stylesheet" href="style.css" />
 	</head>
@@ -17,7 +20,7 @@
 				<div class="header--icons--container">
 					<div
 						class="header--icons--image--container open--link"
-						data-link="https://api.whatsapp.com/send?phone=5429144444">
+						data-link="https://api.whatsapp.com/send?phone=5492914466851">
 						<img
 							class="header--icons--image--wts"
 							src="./img/assets/wtsp.svg"
@@ -33,7 +36,7 @@
 					</div>
 					<div
 						class="header--icons--image--container open--link"
-						data-link="https://www.facebook.com/geacapacitacion">
+						data-link="https://www.facebook.com/gea2.0capacitacion">
 						<img
 							class="header--icons--image--fb"
 							src="./img/assets/fb.svg"
@@ -80,7 +83,7 @@
 						<div class="header--icons--container">
 							<div
 								class="header--icons--image--container open--link"
-								data-link="https://api.whatsapp.com/send?phone=5429144444">
+								data-link="https://api.whatsapp.com/send?phone=5492914466851">
 								<img
 									class="header--icons--image--wts"
 									src="./img/assets/wtsp.svg"
@@ -96,7 +99,7 @@
 							</div>
 							<div
 								class="header--icons--image--container open--link"
-								data-link="https://www.facebook.com/geacapacitacion">
+								data-link="https://www.facebook.com/gea2.0capacitacion">
 								<img
 									class="header--icons--image--fb"
 									src="./img/assets/fb.svg"
@@ -707,6 +710,15 @@
 			</div>
 			<!-- END FAQS -->
 
+			<!-- WHATSAPP BUTTON -->
+			<a
+				href="https://api.whatsapp.com/send?phone=5492914466851&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n"
+				class="float"
+				target="_blank">
+				<i class="fa fa-whatsapp my-float"></i>
+			</a>
+			<!-- END WHATSAPP BUTTON -->
+
 			<!-- FOOTER -->
 			<footer class="footer">
 				<div class="footer--info--container">
@@ -718,7 +730,7 @@
 				<div class="footer--icons--container" id="contacto">
 					<div
 						class="footer--info--icon--container open--link"
-						data-link="https://api.whatsapp.com/send?phone=5429144444">
+						data-link="https://api.whatsapp.com/send?phone=5492914466851">
 						<div class="footer--info--icon--link" title="whatsapp">
 							<img
 								class="footer--info--icon--link--image"
@@ -726,7 +738,7 @@
 								alt="whatsapp" />
 						</div>
 						<p class="footer--info--icon--container--text">
-							5429144444
+							+54 9 2914 46-6851
 						</p>
 					</div>
 					<div class="footer--info--icon--container" data-link="">
@@ -755,7 +767,7 @@
 					</div>
 					<div
 						class="footer--info--icon--container open--link"
-						data-link="https://www.facebook.com/geacapacitacion">
+						data-link="https://www.facebook.com/gea2.0capacitacion">
 						<div class="footer--info--icon--link" title="Facebook">
 							<img
 								class="footer--info--icon--link--image"
