--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
 								alt="email" />
 						</div>
 						<p class="footer--info--icon--container--text">
-							email@email.com
+							geacapacitaciones@gmail.com
 						</p>
 					</div>
 					<div
