--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="GEA" />
 		<title>GEA</title>
 		<link
 			rel="stylesheet"
@@ -16,7 +17,7 @@
 		<div id="home" class="app--container">
 			<!-- DESKTOP -->
 			<header class="header">
-				<img class="header--image" src="./img/gea/logo.jpg" alt="gea" />
+				<img class="header--image" src="./img/gea/logo.jpg" alt="GEA" />
 				<div class="header--icons--container">
 					<div
 						class="header--icons--image--container open--link"
@@ -71,7 +72,7 @@
 					<img
 						class="header--mobile--nav--image"
 						src="./img/gea/logo.jpg"
-						alt="logo" />
+						alt="GEA" />
 
 					<div class="header--mobile--nav--close" data-menu="11">
 						<div class="header--mobile--nav--close--left"></div>
@@ -133,13 +134,6 @@
 			<!-- HERO -->
 			<section id="nosotros" class="hero--section">
 				<div class="hero--section--info">
-					<!-- <h2 class="hero--section--info--title">G.E.A</h2> -->
-					<!-- <img
-						id="logo"
-						class="hero--section--logo"
-						src="./img/gea/logo.jpg"
-						alt="gea" /> -->
-
 					<p class="hero--section--info--text">
 						Somos una empresa dedicada a la
 						<span class="hero--section--info--text--span">
@@ -163,7 +157,10 @@
 						>
 					</div>
 				</div>
-				<img class="hero--section--image" src="./img/gea/1.png" />
+				<img
+					class="hero--section--image"
+					src="./img/gea/1.png"
+					alt="background-image-GEA" />
 			</section>
 			<!-- END HERO -->
 
@@ -210,7 +207,8 @@
 				</div>
 				<img
 					class="appear mision--section--image opacity-0"
-					src="./img/assets/certificate.svg" />
+					src="./img/assets/certificate.svg"
+					alt="icon-study" />
 			</section>
 			<!-- END MISION -->
 
@@ -219,7 +217,8 @@
 				<img
 					data-src="./img/assets/benefits.png"
 					class="benefits--section--image lazy"
-					src="" />
+					src=""
+					alt="icon-benefits" />
 				<h2 class="benefits--section--title">Beneficios</h2>
 				<ul class="benefits--section--list">
 					<li class="benefits--section--list--li">
@@ -261,7 +260,7 @@
 							data-src="./img/cursos/diplomaturas/2.jpeg"
 							class="services--section--card--image lazy"
 							src=""
-							alt="image" />
+							alt="Diplomatura en Alfabetización Digital" />
 						<p class="services--section--card--text">
 							Esta Diplomatura Universitaria se enfoca en la
 							Alfabetización Digital como una habilidad
@@ -283,7 +282,7 @@
 							data-src="./img/cursos/diplomaturas/5.jpeg"
 							class="services--section--card--image lazy"
 							src=""
-							alt="image" />
+							alt="Diplomatura en Comunicación Institucional" />
 						<p class="services--section--card--text">
 							La Diplomatura en Comunicación Institucional y
 							Competencias Comunicativas en la Escuela se enfoca
@@ -309,7 +308,7 @@
 							data-src="./img/cursos/diplomaturas/4.jpeg"
 							class="services--section--card--image lazy"
 							src=""
-							alt="image" />
+							alt="Diplomatura en Dirección de Instituciones Educativas" />
 						<p class="services--section--card--text">
 							La Diplomatura en Comunicación Institucional y
 							Competencias Comunicativas en la Escuela se centra
@@ -332,7 +331,7 @@
 							data-src="./img/cursos/diplomaturas/3.jpeg"
 							class="services--section--card--image lazy"
 							src=""
-							alt="image" />
+							alt="Diplomatura en Evaluación Educativa" />
 						<p class="services--section--card--text">
 							El Diplomado en Evaluación Educativa fomenta un
 							análisis reflexivo de la evaluación como herramienta
@@ -355,7 +354,8 @@
 							data-src="./img/cursos/diplomaturas/6.jpeg"
 							class="services--section--card--image lazy"
 							src=""
-							alt="image" />
+							alt="Diplomatura en Problemas Actuales de la Gestión
+							Institucional" />
 						<p class="services--section--card--text">
 							La Diplomatura en Problemas Actuales de la Gestión
 							tiene como objetivo colaborar en la mejora de las
@@ -377,7 +377,7 @@
 							data-src="./img/cursos/diplomaturas/1.jpeg"
 							class="services--section--card--image--special lazy"
 							src=""
-							alt="image" />
+							alt="Diplomatura en Educación y Medios" />
 						<p class="services--section--card--text">
 							La diplomatura aborda la relación entre educación y
 							medios de comunicación en la sociedad actual. Se
@@ -405,7 +405,8 @@
 							data-src="./img/cursos/actualizaciones/1.jpeg"
 							class="services--section--card--image lazy"
 							src=""
-							alt="image" />
+							alt="Actualización Selección y evaluación de software
+							educativo" />
 						<p class="services--section--card--text">
 							Esta Actualización Académica se centra en la
 							selección y evaluación de software educativo libre
@@ -426,7 +427,7 @@
 							data-src="./img/cursos/actualizaciones/2.jpeg"
 							class="services--section--card--image lazy"
 							src=""
-							alt="image" />
+							alt="Evaluación Diagnóstica para aprendizaje sustentable" />
 						<p class="services--section--card--text">
 							Los objetivos generales de esta actualización se
 							centran en el análisis de las circunstancias
@@ -446,7 +447,8 @@
 							data-src="./img/cursos/actualizaciones/3.jpeg"
 							class="services--section--card--image lazy"
 							src=""
-							alt="image" />
+							alt="Actualización Académica en Ecosistemas Digitales en
+							la escuela" />
 						<p class="services--section--card--text">
 							Esta Actualización Académica se enfoca en los
 							ecosistemas digitales como entornos de interacción y
@@ -475,7 +477,8 @@
 							data-src="./img/cursos/especializaciones/4.jpeg"
 							class="services--section--card--image lazy"
 							src=""
-							alt="image" />
+							alt="Especialización Docente de Nivel Superior en
+							Educación Permanente de Jóvenes y Adultos" />
 						<p class="services--section--card--text">
 							Esta Especialización se centra en la gestión
 							institucional y del aula en la Educación Permanente
@@ -496,7 +499,8 @@
 							data-src="./img/cursos/especializaciones/3.jpeg"
 							class="services--section--card--image lazy"
 							src=""
-							alt="image" />
+							alt="Especialización Docente de Nivel Superior en Jardín
+							maternal" />
 						<p class="services--section--card--text">
 							Esta propuesta apunta a formar especialistas en
 							Jardín Maternal que contemple una mejor calidad de
@@ -518,7 +522,8 @@
 							data-src="./img/cursos/especializaciones/2.jpeg"
 							class="services--section--card--image lazy"
 							src=""
-							alt="image" />
+							alt="Especialización Docente de Nivel Superior en
+							Educación en Contextos de encierro" />
 						<p class="services--section--card--text">
 							La especialización tiene una duración de cuatro
 							bimestres y consta de 9 módulos virtuales con
@@ -544,28 +549,28 @@
 							data-src="./img/formacion/3.jpeg"
 							class="services--section--card--image lazy"
 							src=""
-							alt="image" />
+							alt="Tramo Pedagógico de Nivel Medio y SUPERIOR" />
 					</div>
 					<div class="services--section--card">
 						<img
 							data-src="./img/formacion/1.jpeg"
 							class="services--section--card--image lazy"
 							src=""
-							alt="image" />
+							alt="Tramo Pedagógico de Nivel Medio y SUPERIOR" />
 					</div>
 					<div class="services--section--card">
 						<img
 							data-src="./img/formacion/2.jpeg"
 							class="services--section--card--image lazy"
 							src=""
-							alt="image" />
+							alt="Tramo Pedagógico de Nivel Medio y SUPERIOR" />
 					</div>
 					<div class="services--section--card">
 						<img
 							data-src="./img/formacion/4.jpeg"
 							class="services--section--card--image lazy"
 							src=""
-							alt="image" />
+							alt="Tramo Pedagógico de Nivel Medio y SUPERIOR" />
 					</div>
 				</div>
 				<!-- END PEDAGOGIAS -->
@@ -580,6 +585,7 @@
 					<div class="swiper-wrapper swiper-reviews">
 						<div class="swiper-slide">
 							<iframe
+								title="review comment"
 								src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fnoelia.diaz.908%2Fposts%2Fpfbid02Ga4kuUcCwbKVYE1FU3FE9ELGMgpmBg53VCtASQZNLBSCfvjsKmo8bU18r3LBZy48l&show_text=true&width=500"
 								width="500"
 								height="169"
@@ -591,6 +597,7 @@
 						</div>
 						<div class="swiper-slide">
 							<iframe
+								title="review comment"
 								src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmelii.risso%2Fposts%2Fpfbid0aPjv4BiKENGKyE37yRfK55Yin7WAxyuZxmsz1iRvkem2rux6avmhRYFBrXyUsg4il&show_text=true&width=500"
 								width="500"
 								height="246"
@@ -602,6 +609,7 @@
 						</div>
 						<div class="swiper-slide">
 							<iframe
+								title="review comment"
 								src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fadrianalaura.martinez%2Fposts%2Fpfbid02CTLFXgPyNCqAW7d3D1cPGGuewemQ3j88GoZhffK9pVCkDKmn3BAtdwPEX7TZbDoAl&show_text=true&width=500"
 								width="500"
 								height="188"
@@ -613,6 +621,7 @@
 						</div>
 						<div class="swiper-slide">
 							<iframe
+								title="review comment"
 								src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fgabriela.serrano.399041%2Fposts%2Fpfbid032wAXAXvCFyiyS6MtTY8KLHMTEHFs9H15gumTQhyCULbFGEeFxNFSmYSgtzC35knHl&show_text=true&width=500"
 								width="500"
 								height="186"
@@ -624,6 +633,7 @@
 						</div>
 						<div class="swiper-slide">
 							<iframe
+								title="review comment"
 								src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmartuu.corsini%2Fposts%2Fpfbid0279UBQMoJHxtB7Ltn6iQSENQZ5qvNcDahHvS59SGtju8WAEkmSA3cMuH12BNexbPQl&show_text=true&width=500"
 								width="500"
 								height="214"
@@ -643,7 +653,7 @@
 			<!-- END CAPACITACIONES -->
 
 			<!-- FAQS -->
-			<div class="faqs">
+			<section class="faqs">
 				<h4 class="faqs--title">Preguntas Frecuentes</h4>
 				<p class="faqs--description">
 					Queremos aclarar cualquier inquietud que puedas tener. A
@@ -707,7 +717,7 @@
 						elegido
 					</div>
 				</details>
-			</div>
+			</section>
 			<!-- END FAQS -->
 
 			<!-- WHATSAPP BUTTON -->
